Discover bug with local script truncating git commit message :D, and small style fixes

--- a/server/http_server/static/index.css
+++ b/server/http_server/static/index.css
@@ -13,6 +13,11 @@ body {
     align-items: flex-start;
     padding: 20px;
 }
+.jas-watermark {
+    font-size: 0.8em;
+    margin-top: 40px;
+    text-align: center;
+}
 h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
